Rework before merge